--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ html {
   line-height: var(--line-height-normal);
   color: var(--color-text);
   background-color: var(--color-background);
+  color-scheme: light;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
 }
@@ -161,6 +162,8 @@ html {
 body {
   margin: 0;
   padding: 0;
+  background-color: var(--color-background);
+  color: var(--color-text);
 }
 
 *,
